work on background Color

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h1 id="check-Box" class="text-3xl font-bold">23</h1>
                 </div>
                 <div
-                    class="themeLogo bg-bcground w-14 h-14 flex items-center justify-center rounded-full cursor-pointer">
+                   id="Background-btn" class="themeLogo bg-bcground w-14 h-14 flex items-center justify-center rounded-full cursor-pointer">
                     <img class="w-8" src="/images/theme-btn.png" alt="" />
                 </div>
             </div>
