--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>A5-Dev-Board</title>
-    <link rel="icon" href="/images/logo.png" />
+    <link rel="icon" href="images/logo.png" />
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
     </style>
@@ -37,18 +37,18 @@
     <header class="bg-white p-6 rounded-2xl">
         <nav class="flex justify-between">
             <div class="mainLogo flex items-center gap-1 cursor-pointer">
-                <img src="/images/logo.png" alt="" />
+                <img src="images/logo.png" alt="" />
                 <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
             </div>
             <div class="childLogo flex items-center gap-9">
                 <div
                     class="checkbox flex items-center gap-3 w-28 h-14 justify-center rounded-full bg-bcground border-none">
-                    <img class="w-7" src="/images/checkbox.png" alt="" />
+                    <img class="w-7" src="images/checkbox.png" alt="" />
                     <h1 id="check-Box" class="text-3xl font-bold">23</h1>
                 </div>
                 <div
                    id="Background-btn" class="themeLogo bg-bcground w-14 h-14 flex items-center justify-center rounded-full cursor-pointer">
-                    <img class="w-8" src="/images/theme-btn.png" alt="" />
+                    <img class="w-8" src="images/theme-btn.png" alt="" />
                 </div>
             </div>
         </nav>
@@ -64,7 +64,7 @@
                     <!-- task -->
                     <div class="bg-bcground flex items-center gap-6 h-32 justify-center rounded-2xl">
                         <div class="bg-white w-14 h-14 flex items-center justify-center rounded-full">
-                            <img class="w-6" src="/images/checkbox.png" alt="" />
+                            <img class="w-6" src="images/checkbox.png" alt="" />
                         </div>
                         <div class="">
                             <small class="text-base">Task Assigned</small>
@@ -72,9 +72,9 @@
                         </div>
                     </div>
                     <!-- Discover -->
-                    <a href="/questionPage.html"
+                    <a href="questionPage.html"
                         class="col-span-2 h-32 rounded-2xl bg-gradient-to-r from-gradiantBG1 via-gradiantBG2 to-gradiantBG3 flex justify-start pl-20 items-center gap-5 cursor-pointer">
-                        <img src="/images/board.png" alt="" />
+                        <img src="images/board.png" alt="" />
                         <h3 class="text-white font-medium text-2xl">
                             Discover Something <br />New Today!
                         </h3>
@@ -82,7 +82,7 @@
                     <!-- date -->
                     <div class="bg-bcground flex items-center gap-6 h-32 justify-center rounded-2xl">
                         <div class="bg-white w-14 h-14 flex items-center justify-center rounded-full">
-                            <img class="w-6" src="/images/calender.png" alt="" />
+                            <img class="w-6" src="images/calender.png" alt="" />
                         </div>
                         <div class="">
                             <h3 id="day" class="text-xl"></h3>
@@ -288,7 +288,7 @@
         <section class="bg-white rounded-2xl">
             <div class="px-6 pt-2 flex flex-col justify-center items-center">
                 <div class="flex items-center gap-4 py-4">
-                    <img src="/images/activity.png" alt="" />
+                    <img src="images/activity.png" alt="" />
                     <h3 class="font-medium text-xl">Activity Log</h3>
                 </div>
                 <button id="clear-history" class="bg-gradiantBG1 text-white py-2 px-5 rounded-lg">
@@ -300,8 +300,8 @@
         </section>
     </main>
 
-    <script src="/js/function.js"></script>
-    <script src="/js/completeTask.js"></script>
+    <script src="js/function.js"></script>
+    <script src="js/completeTask.js"></script>
 </body>
 
 </html>
