--- a/questionPage.html
+++ b/questionPage.html
@@ -36,13 +36,13 @@
   <!-- Header -->
   <header class="bg-white p-6 rounded-2xl">
     <nav class="flex justify-between">
-      <a href="/index.html">
+      <a href="index.html">
         <div class="mainLogo flex items-center gap-1 cursor-pointer">
-          <img src="/images/logo.png" alt="" />
+          <img src="images/logo.png" alt="" />
           <h1 class="text-3xl">Dev<span class="font-bold">Board</span></h1>
         </div>
       </a>
-      <a href="/index.html" class="">
+      <a href="index.html" class="">
         <button class="card-btn bg-gradiantBG1 text-white py-4 px-5 rounded-md">
           Back to Desk
         </button>
@@ -102,8 +102,8 @@
 
   </main>
 
-  <script src="/js/function.js"></script>
-  <script src="/js/completeTask.js"></script>
+  <script src="js/function.js"></script>
+  <script src="js/completeTask.js"></script>
 </body>
 
 </html>
