--- a/questionPage.html
+++ b/questionPage.html
@@ -61,8 +61,10 @@
       <h1 class="bg-white p-4 font-semibold text-lg rounded-xl rounded-b-none border-b-2 border-dashed border-gray-200">
         Question-1: What are the different ways to select an element in the DOM?
       </h1>
-      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Autem quam aut rem illum magnam a obcaecati adipisci. Inventore, ipsa optio.</h1>
+      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
+        1.getElementById(), 2.getElementsByTagName(), 3.getElementsByClassName(), 4.querySelector(),
+        5.querySelectorAll(), 6.getElementsByName()
+      </h1>
     </div>
 
     <!-- Wuestion 02 -->
@@ -70,8 +72,11 @@
       <h1 class="bg-white p-4 font-semibold text-lg rounded-xl rounded-b-none border-b-2 border-dashed border-gray-200">
         Question-2: What is the difference between innerHTML, innerText, and textContent ?
       </h1>
-      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Autem quam aut rem illum magnam a obcaecati adipisci. Inventore, ipsa optio.</h1>
+      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
+        1.innerHTML: Gets the HTML content inside an element, including HTML tags.
+        2.innerText: Gets the text inside an element.
+        3.textContent: Gets all text content, including hidden text and faster than innerText.
+      </h1>
     </div>
 
     <!-- Wuestion 03 -->
@@ -79,8 +84,10 @@
       <h1 class="bg-white p-4 font-semibold text-lg rounded-xl rounded-b-none border-b-2 border-dashed border-gray-200">
         Question-3: What is event delegation in the DOM?
       </h1>
-      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Autem quam aut rem illum magnam a obcaecati adipisci. Inventore, ipsa optio.</h1>
+      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
+        Event Delegation is a technique in JavaScript where we attach a single event listener to a parent element
+        instead of adding event listeners to multiple child elements.
+      </h1>
     </div>
 
     <!-- Wuestion 04 -->
@@ -88,16 +95,20 @@
       <h1 class="bg-white p-4 font-semibold text-lg rounded-xl rounded-b-none border-b-2 border-dashed border-gray-200">
         Question-4: What is event bubbling in the DOM?
       </h1>
-      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Autem quam aut rem illum magnam a obcaecati adipisci. Inventore, ipsa optio.</h1>
+      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
+        Event Bubbling is a process where an event triggered on a child element bubbles up to its parent elements in the
+        DOM hierarchy. This means that the event is first handled by the target element and then propagates upward to
+        its ancestors.
+      </h1>
     </div>
     <!-- Wuestion 05 -->
     <div class="mb-6">
       <h1 class="bg-white p-4 font-semibold text-lg rounded-xl rounded-b-none border-b-2 border-dashed border-gray-200">
         Question-5: How do you create, add, and remove elements using JavaScript?
       </h1>
-      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Autem quam aut rem illum magnam a obcaecati adipisci. Inventore, ipsa optio.</h1>
+      <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
+        document.createElement(), appendChild(), removeChild().
+      </h1>
     </div>
 
   </main>
