Project Finally complete

--- a/questionPage.html
+++ b/questionPage.html
@@ -73,8 +73,8 @@
         Question-2: What is the difference between innerHTML, innerText, and textContent ?
       </h1>
       <h1 class="bg-white p-4 text-lg rounded-xl rounded-t-none text-gray-500">
-        1.innerHTML: Gets the HTML content inside an element, including HTML tags.
-        2.innerText: Gets the text inside an element.
+        1.innerHTML: Gets the HTML content inside an element, including HTML tags. <br>
+        2.innerText: Gets the text inside an element.<br>
         3.textContent: Gets all text content, including hidden text and faster than innerText.
       </h1>
     </div>
